[project]
requires-python = ">=3.11,<3.13"  

name = "your-project"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "langchain",
  "langchain-community",
  "langchain-core",
  "langchain-google-genai",
  "chromadb",
  "torch",
  "transformers",
  "sentence-transformers",
  "sqlalchemy",
  "psycopg[binary]",
  "redis",
  "openai",
  "google-generativeai",
  "livekit",
  "livekit-plugins-elevenlabs",
  "livekit-plugins-assemblyai",
  "livekit-plugins-google",
  "livekit-plugins-langchain",
  "livekit-plugins-silero",
  "livekit-plugins-noise-cancellation",
  "livekit-plugins-turn-detector",
  "livekit-plugins-langchain",
  "pymupdf>=1.26.7",
  "langchain-text-splitters>=1.1.0",
  "tavily-python>=0.7.19",
  "langgraph-checkpoint-postgres>=3.0.3",
  "python-multipart>=0.0.22",
  "argon2-cffi>=25.1.0",
  "pymongo>=4.16.0",
  "fastapi-mail>=1.6.2",
  "motor>=3.7.1",
  "passlib>=1.7.4",
  "jose>=1.0.0",
  "crypto>=1.4.1",
  "python-jose[cryptography]>=3.5.0",
  "langserve[all]>=0.3.3",
  "livekit-plugins-simli>=1.3.12",
]
